# Velaris-App-OS

./: .env.example  .gitignore  LICENSE  Makefile  README.md  channels.json  pyproject.toml  setup-velaris.sh  start-velaris.sh  stop-velaris.sh  uninstall-velaris.sh  update-velaris.sh  velaris.yaml
codegen/: pyproject.toml
engine/: Dockerfile  LICENSE  pyproject.toml
engine/helix_engine/: __init__.py  main.py
engine/helix_engine/api/routers/: __init__.py  process.py
engine/helix_engine/api/schemas/: __init__.py  process.py
engine/helix_engine/compiler/: __init__.py  compiler.py  validator.py
engine/helix_engine/compiler/optimizer/: __init__.py
engine/helix_engine/compiler/parser/: __init__.py
engine/helix_engine/db/: models.py  pg_store.py  session.py  store.py
engine/helix_engine/observability/: __init__.py  context.py  events.py  logging_config.py  metrics.py  middleware.py  telemetry.py
engine/helix_engine/plugins/: __init__.py  http_resolver.py
engine/helix_engine/runtime/: __init__.py
engine/helix_engine/runtime/event/: __init__.py
engine/helix_engine/runtime/gateway/: __init__.py
engine/helix_engine/runtime/task/: __init__.py
engine/helix_engine/temporal/: __init__.py  client.py  worker.py
engine/helix_engine/temporal/activities/: __init__.py
engine/helix_engine/temporal/workflows/: __init__.py
engine/tests/integration/: test_api.py
engine/tests/unit/: test_compiler.py  test_http_resolver.py
libs/velaris-ir/python/: pyproject.toml
libs/velaris-ir/python/helix_ir/: __init__.py
libs/velaris-ir/python/tests/: test_process.py
libs/velaris-sdk/: pyproject.toml
libs/velaris-sdk/helix_sdk/: __init__.py
libs/velaris-sdk/helix_sdk/config/: brand.py  settings.py
libs/velaris-sdk/helix_sdk/plugin/: __init__.py  registry.py
libs/velaris-sdk/helix_sdk/protocols/: __init__.py  audit.py  auth.py  cache.py  case_manager.py  channel.py  database.py  event_bus.py  exporter.py  generator.py  git.py  importer.py  integration.py  llm.py  notification.py  rules_engine.py  scanner.py  search.py  sla_engine.py  storage.py  telephony.py  work_queue.py
plugins/ai/velaris-ai-ollama/: pyproject.toml
plugins/ai/velaris-ai-ollama/helix_ai_ollama/: __init__.py
plugins/auth/velaris-auth-keycloak/: pyproject.toml
plugins/auth/velaris-auth-keycloak/helix_auth_keycloak/: __init__.py
plugins/cache/velaris-cache-redis/: pyproject.toml
plugins/cache/velaris-cache-redis/helix_cache_redis/: __init__.py
plugins/channels/velaris-channels-email/: pyproject.toml
plugins/channels/velaris-channels-email/helix_channels_email/: __init__.py
plugins/channels/velaris-channels-webchat/: pyproject.toml
plugins/channels/velaris-channels-webchat/helix_channels_webchat/: __init__.py
plugins/db/velaris-db-postgresql/: pyproject.toml
plugins/db/velaris-db-postgresql/helix_db_postgresql/: __init__.py
plugins/events/velaris-events-kafka/: pyproject.toml
plugins/events/velaris-events-kafka/helix_events_kafka/: __init__.py
plugins/git/velaris-git-local/: pyproject.toml
plugins/git/velaris-git-local/helix_git_local/: __init__.py
plugins/integrations/velaris-integrations-rest/: pyproject.toml
plugins/integrations/velaris-integrations-rest/helix_integrations_rest/: __init__.py
scout/agent/: pyproject.toml
scout/cli/: pyproject.toml
services/ai-service/: pyproject.toml
services/ai-service/ai_service/: __init__.py  main.py
services/case-service/: Dockerfile  docker-compose.service.yml  pyproject.toml
services/case-service/case_service/: config.py  main.py  main.py.bak.20260403172813  main.py.bak.20260403172941
services/case-service/case_service/analytics/: __init__.py  exporter.py  metrics.py  query_engine.py
services/case-service/case_service/api/: health.py  observability.py
services/case-service/case_service/apps/: __init__.py  differ.py  packager.py
services/case-service/case_service/auth/: dependencies.py  devices.py  jwt_handler.py  models.py  webauthn_service.py
services/case-service/case_service/bpm_importer/: __init__.py  extractor.py  generator.py  mapper.py  pipeline.py  reporter.py
services/case-service/case_service/case_vars/: __init__.py  service.py
services/case-service/case_service/checkout/: __init__.py  case_type.py  notifications.py  service.py  tokens.py  webhooks.py
services/case-service/case_service/codegen/: generator.py  templates.py
services/case-service/case_service/comms/: service.py
services/case-service/case_service/compliance/: __init__.py  audit_anchor.py  audit_chain.py  lineage.py  reports.py
services/case-service/case_service/core/: access_control.py  assignment_router.py  business_calendar.py  case_lifecycle.py  outbound_rules.py  relationship_manager.py  rules_evaluator.py  rules_evaluator.py.bak.20260403172941  safe_expression.py  sla_escalation.py  sla_tracker.py  urgency_calculator.py  (+1 more)
services/case-service/tests/: conftest.py  setup_mariadb_testdb.sh  setup_mysql_testdb.sh  setup_pg_testdb.sh  test_api_integration.py  test_bpm_providers_live.py  test_ir_models.py  test_phase10_integrations.py  test_phase11_admin.py  test_phase12_production.py  test_phase13_auth.py  test_phase14_process_mining.py  test_phase15_nlp.py  test_phase16_scout.py  test_phase17_multitenancy.py  test_phase18_codegen.py  test_phase19_scout_ai.py  test_phase20_enterprise.py  test_phase21_orchestrator.py  test_phase22_realtime.py  test_phase2_core.py  test_phase3_rules.py  test_phase47_hxfusion.py  test_phase48_hxconnect_payment.py  test_phase48b_disbursements.py  test_phase49_kyc_esign.py  test_phase50_crm_invoices.py  test_phase51_comms.py  test_phase52_docintel.py  test_phase53_devconn.py  test_phase54_hxmigrate.py  test_phase55_hxdeploy.py  test_phase56_hxwork.py  test_phase57_hxcanvas.py  test_phase58_hxdocs.py  test_phase59_hxshield.py  test_phase7_forms.py  test_phase8.py  test_phase9_analytics.py
services/rules-service/: pyproject.toml
services/rules-service/rules_service/: __init__.py  main.py
services/user-service/: pyproject.toml
services/user-service/user_service/: __init__.py  main.py
(+778 files in other folders)
