[project]
name = "velaris-codegen"
version = "0.1.0"
requires-python = ">=3.12"
license = {text = "BSL-1.1"}
dependencies = ["velaris-ir", "velaris-sdk", "jinja2>=3.1,<4"]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["helix_codegen"]
