[project]
name = "velaris-engine"
version = "0.1.0"
description = "Velaris Flow Engine — BPMN 2.0 on Temporal"
requires-python = ">=3.12"
license = {text = "BSL-1.1"}
dependencies = [
    "velaris-ir",
    "velaris-sdk",
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34",
    "temporalio>=1.8,<2",
    "lxml>=5.3,<6",
    "pyyaml>=6.0,<7",
    "structlog>=24.0",
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.7,<3",
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.29,<1",
    "alembic>=1.14,<2",
    "httpx>=0.28",
]
[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["helix_engine"]
