[project]
name = "velaris-sdk"
version = "0.1.0"
description = "Velaris SDK — Protocol definitions, plugin framework, shared utilities"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
dependencies = [
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.7,<3",
    "structlog>=24.0",
    "httpx>=0.28",
]
[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["helix_sdk"]
