[project]
name = "velaris-scout-agent"
version = "0.1.0"
requires-python = ">=3.12"
license = {text = "BSL-1.1"}
dependencies = ["velaris-ir", "velaris-sdk", "fastapi>=0.115,<1"]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["helix_scout_agent"]
