[project]
name = "velaris-scout"
version = "0.1.0"
requires-python = ">=3.12"
license = {text = "BSL-1.1"}
dependencies = ["velaris-ir", "velaris-sdk", "typer>=0.15,<1", "rich>=13.0,<14"]
[project.scripts]
helix-scout = "helix_scout.main:app"
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["helix_scout"]
