[project]
name = "velaris-case-service"
version = "0.1.0"
description = "Velaris Case Management Service"
requires-python = ">=3.12"
license = "LicenseRef-BSL-1.1"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.30.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "temporalio>=1.7.0",
    "httpx>=0.28.0",
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.48b0",
    "opentelemetry-instrumentation-httpx>=0.48b0",
    "opentelemetry-exporter-otlp-proto-http>=1.27",
    "prometheus-client>=0.20",
    "structlog>=24.1",
    "minio>=7.2",
    "pypdf>=4.3",
    "pypdfium2>=4.0",
    "Pillow>=10.4",
    "reportlab>=4.2",
    "python-multipart>=0.0.9",
    "aiofiles>=23.2",
    "redis>=5.0",
    "locust>=2.31",
    "aiosmtplib>=3.0",
    "aioimaplib>=1.0",
    "jinja2>=3.1",
    "pyjwt[crypto]>=2.8",
    "cryptography>=42.0",
    "pycryptodome>=3.20",
    "numpy>=2.4.4",
    "python-docx>=1.2.0",
    "defusedxml>=0.7.1",
    "bcrypt>=4.9.9",
    "docker>=7.0.0",
    "faker>=25.0.0",
    "semver>=3.0.0",
    "webauthn>=2.0.0",
    "wasmtime>=45,<46",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "aiosqlite>=0.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["case_service"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "pytest-asyncio>=1.3.0",
]
