[project]
name = "velaris-user-service"
version = "0.1.0"
description = "Velaris user-service"
requires-python = ">=3.12"
license = {text = "BSL-1.1"}
dependencies = ["velaris-sdk", "velaris-ir", "fastapi>=0.115,<1", "uvicorn[standard]>=0.34"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["user_service"]
