[project]
name = "velaris-ir"
version = "0.1.0"
description = "Velaris Intermediate Representation"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
dependencies = ["pydantic>=2.10,<3", "pyyaml>=6.0,<7"]
[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["helix_ir"]
