[project]
name = "velaris-ai-ollama"
version = "0.1.0"
description = "Velaris ai plugin: ollama"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
dependencies = ["velaris-sdk"]

[project.entry-points."helix.llm"]
ollama = "helix_ai_ollama:OllamaBackend"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["helix_ai_ollama"]
