[project]
name = "velaris-auth-keycloak"
version = "0.1.0"
description = "Velaris auth plugin: keycloak"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
dependencies = ["velaris-sdk"]

[project.entry-points."helix.auth"]
keycloak = "helix_auth_keycloak:KeycloakBackend"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["helix_auth_keycloak"]
