[project]
name = "velaris-cache-redis"
version = "0.1.0"
description = "Velaris cache plugin: redis"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
dependencies = ["velaris-sdk"]

[project.entry-points."helix.cache"]
redis = "helix_cache_redis:RedisBackend"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["helix_cache_redis"]
