[project]
name = "velaris-channels-email"
version = "0.1.0"
description = "Velaris channels plugin: email"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
dependencies = ["velaris-sdk"]

[project.entry-points."helix.channel"]
email = "helix_channels_email:EmailBackend"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["helix_channels_email"]
