[project]
name = "velaris-channels-webchat"
version = "0.1.0"
description = "Velaris channels plugin: webchat"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
dependencies = ["velaris-sdk"]

[project.entry-points."helix.channel"]
webchat = "helix_channels_webchat:WebchatBackend"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["helix_channels_webchat"]
