[project]
name = "velaris-db-postgresql"
version = "0.1.0"
description = "Velaris db plugin: postgresql"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
dependencies = ["velaris-sdk"]

[project.entry-points."helix.database"]
postgresql = "helix_db_postgresql:PostgresqlBackend"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["helix_db_postgresql"]
