[project]
name = "velaris-events-kafka"
version = "0.1.0"
description = "Velaris events plugin: kafka"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
dependencies = ["velaris-sdk"]

[project.entry-points."helix.event_bus"]
kafka = "helix_events_kafka:KafkaBackend"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["helix_events_kafka"]
