[project]
name = "velaris-git-local"
version = "0.1.0"
description = "Velaris git plugin: local"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
dependencies = ["velaris-sdk"]

[project.entry-points."helix.git"]
local = "helix_git_local:LocalBackend"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["helix_git_local"]
