[project]
name = "velaris-integrations-rest"
version = "0.1.0"
description = "Velaris integrations plugin: rest"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
dependencies = ["velaris-sdk"]

[project.entry-points."helix.integration"]
rest = "helix_integrations_rest:RestBackend"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["helix_integrations_rest"]
